Added more css to initial buttons

--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -11,34 +11,53 @@
     Below are resources to help you better understand <b>climate change</b> and how to reduce your <b>carbon
         footprint</b>:
 </p>
+
+<div class="action">
+    <div class="action-item">
+        <a href="http://flood.firetree.net/?ll=43.3251,-101.6015&z=13&m=7" target="_blank"><img class="action-button"
+                src="{{ url_for('static', filename='action_floodmaps.png') }}" alt="Floodmaps Button">
+        </a>
+        <a href="http://flood.firetree.net/?ll=43.3251,-101.6015&z=13&m=7" target="_blank" class="action-label">
+            <p>FLOOD MAPS</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank"><img
+                class="action-button" src="{{ url_for('static', filename='action_nasa.png') }}" alt="NASA Button">
+        </a>
+        <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank" class="action-label"
+            class="action-label">
+            <p>NASA INTERACTIVES</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"
+            target="_blank" class="action-label"><img class="action-button"
+                src="{{ url_for('static', filename='action_nytimes.png') }}" alt="New York Times Button">
+        </a>
+        <a href="https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"
+            target="_blank" class="action-label">
+            <p>NY TIMES</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.un.org/en/actnow" target="_blank"><img class="action-button"
+                src="{{ url_for('static', filename='action_un.png') }}" alt="United Nations Button">
+        </a>
+        <a href="https://www.un.org/en/actnow" target="_blank" class="action-label">
+            <p>UN ACT NOW</p>
+        </a>
+    </div>
+</div>
+
 <p class="src">
     <b>What is Climate Change?</b>
 </p>
 
-<div class="action">
-    <a href="http://flood.firetree.net/?ll=43.3251,-101.6015&z=13&m=7" target="_blank"><img class="action-button"
-            src="{{ url_for('static', filename='action_floodmaps.png') }}" alt="Floodmaps Button">
-    </a>
-    <p class="action-label">FLOOD MAPS</p>
-    <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank"><img class="action-button"
-            src="{{ url_for('static', filename='action_nasa.png') }}" alt="NASA Button">
-    </a>
-    <p class="action-label">NASA INTERACTIVES</p>
-    <a href="https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"
-        target="_blank"><img class="action-button" src="{{ url_for('static', filename='action_nytimes.png') }}"
-            alt="New York Times Button">
-    </a>
-    <p class="action-label">NY TIMES</p>
-    <a href="https://www.un.org/en/actnow" target="_blank"><img class="action-button"
-            src="{{ url_for('static', filename='action_un.png') }}" alt="United Nations Button">
-    </a>
-    <p class="action-label">UN ACT NOW</p>
-</div>
-
 <p class="src">
     <a href="https://www.un.org/en/climatechange/what-is-climate-change"> United Nations: What is Climate Change
     </a><br>
-    <a href="https://www.sciencelearn.org.nz/topics/climate-change"> Science Learning Club: Climate Change </a><br>
+    <a href="https://www.sciencelearn.org.nz/topics/climate-change"> Science Learning Hub: Climate Change </a><br>
     <a href="https://climatekids.nasa.gov/climate-change-meaning/"> NASA (kids edition): Climate Change Meaning </a><br>
     <a href="https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"> NASA:
         What is Climate Change </a><br>
