--- a/static/pages.css
+++ b/static/pages.css
@@ -162,13 +162,24 @@ footer div {
 
 .action {
   display: flex;
+  flex-direction: row;
+}
+.action-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
 }
 .action-button {
   max-width: 225px;
 }
- .action-label {
+.action-label {
   color: black;
   text-decoration: none;
+}
+.action-label p {
+  font-weight: bolder;
 }
 .action-label:hover {
   text-decoration: underline;
