--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -22,12 +22,13 @@
         </a>
     </div>
     <div class="action-item">
-        <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank"><img
-                class="action-button" src="{{ url_for('static', filename='action_nasa.png') }}" alt="NASA Button">
+        <a href="https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"
+            target="_blank"><img class="action-button" src="{{ url_for('static', filename='action_nasa.png') }}"
+                alt="NASA Button">
         </a>
-        <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank" class="action-label"
-            class="action-label">
-            <p>NASA INTERACTIVES</p>
+        <a href="https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"
+            target="_blank" class="action-label" class="action-label">
+            <p>NASA</p>
         </a>
     </div>
     <div class="action-item">
@@ -41,11 +42,76 @@
         </a>
     </div>
     <div class="action-item">
-        <a href="https://www.un.org/en/actnow" target="_blank"><img class="action-button"
+        <a href="https://www.un.org/en/climagechange/what-is-climate-change" target="_blank"><img class="action-button"
                 src="{{ url_for('static', filename='action_un.png') }}" alt="United Nations Button">
         </a>
+        <a href="https://www.un.org/en/climagechange/what-is-climate-change" target="_blank" class="action-label">
+            <p>UN</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.un.org/en/actnow" target="_blank"><img class="action-button"
+                src="{{ url_for('static', filename='action_actnow.png') }}" alt="UN Act Now Button"></a>
         <a href="https://www.un.org/en/actnow" target="_blank" class="action-label">
             <p>UN ACT NOW</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.sciencelearn.org.nz/topics/climate-change" target="_blank"><img class="action-button"
+                src="{{ url_for('static', filename='action_sciencelearninghub.png') }}"
+                alt="Science Learning Hub Button"></a>
+        <a href="https://www.sciencelearn.org.nz/topics/climate-change" target="_blank" class="action-label">
+            <p>SCIENCE LEARNING HUB</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.rainforest-alliance.org/everyday-actions/5-ways-to-build-collective-climate-impact-through-individual-actions/"
+            target="_blank"><img class="action-button"
+                src="{{ url_for('static', filename='action_rainforestalliance.png') }}"
+                alt="Rainforest Alliance Button"></a>
+        <a href="https://www.rainforest-alliance.org/everyday-actions/5-ways-to-build-collective-climate-impact-through-individual-actions/"
+            target="_blank" class="action-label">
+            <p>RAINFOREST ALLIANCE</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.co2nsensus.com/blog/reducing-carbon-footprint-in-schools" target="_blank"><img
+                class="action-button" src="{{ url_for('static', filename='action_co2sensus.png') }}"
+                alt="CO2sensus Button"></a>
+        <a href="https://www.co2nsensus.com/blog/reducing-carbon-footprint-in-schools" target="_blank"
+            class="action-label">
+            <p>CO2NSENSUS</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://climatekids.nasa.gov/climate-change-meaning/" target="_blank"><img class="action-button"
+                src="{{ url_for('static', filename='action_climatekids.png') }}" alt="Climate Kids Button"></a>
+        <a href="https://climatekids.nasa.gov/climate-change-meaning/" target="_blank" class="action-label">
+            <p>CLIMATE KIDS</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.futurelearn.com/info/blog/how-to-reduce-your-carbon-footprint-tips" target="_blank"><img
+                class="action-button" src="{{ url_for('static', filename='action_futurelearn.png') }}"
+                alt="Future Learn Button"></a>
+        <a href="https://www.futurelearn.com/info/blog/how-to-reduce-your-carbon-footprint-tips" target="_blank"
+            class="action-label">
+            <p>FUTURE LEARN</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://www.bbc.com/news/science-environment-24021772" target="_blank"><img class="action-button"
+                src="{{ url_for('static', filename='action_bbc.png') }}" alt="BBC Button"></a>
+        <a href="https://www.bbc.com/news/science-environment-24021772" target="_blank" class="action-label">
+            <p>BBC</p>
+        </a>
+    </div>
+    <div class="action-item">
+        <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank"><img
+                class="action-button" src="{{ url_for('static', filename='action_nasainteractives.png') }}"
+                alt="NASA Interactives Button"></a>
+        <a href="https://climate.nasa.gov/climate_resource_center/interactives" target="_blank" class="action-label">
+            <p>NASA INTERACTIVES</p>
         </a>
     </div>
 </div>
@@ -53,23 +119,7 @@
 <p class="src">
     <b>What is Climate Change?</b>
 </p>
-
-<p class="src">
-    <a href="https://www.un.org/en/climatechange/what-is-climate-change"> United Nations: What is Climate Change
-    </a><br>
-    <a href="https://www.sciencelearn.org.nz/topics/climate-change"> Science Learning Hub: Climate Change </a><br>
-    <a href="https://climatekids.nasa.gov/climate-change-meaning/"> NASA (kids edition): Climate Change Meaning </a><br>
-    <a href="https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-is-climate-change-k4.html"> NASA:
-        What is Climate Change </a><br>
-    <a href="https://www.bbc.com/news/science-environment-24021772"> BBC News: What is Climate Change </a><br>
-</p>
 <p class="src">
     <b>How to decrease your carbon footprint? </b><br>
-    <a href="https://www.futurelearn.com/info/blog/how-to-reduce-your-carbon-footprint-tips"> Future Learn's: 20 top
-        tips on reducing your carbon footprint </a><br>
-    <a href="https://www.nytimes.com/guides/year-of-living-better/how-to-reduce-your-carbon-footprint"> The New York
-        Times: How to reduce your carbon footprint </a><br>
-    <a href="https://www.co2nsensus.com/blog/reducing-carbon-footprint-in-schools"> CO2nsensus: 10 Ways to Reduce Carbon
-        Footprint in Schools </a><br>
 </p>
 {% endblock %}
