--- a/static/pages.css
+++ b/static/pages.css
@@ -165,16 +165,26 @@ footer div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: 100vw;
 }
 .action-item {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 15px;
+  margin: auto;
 }
 .action-button {
-  max-width: 225px;
+  width: 200px;
+}
+.action-button:hover{
+  transform: scale(1);
+  transition-duration: 450ms;
+}
+.action-button:not(:hover){
+  transform: scale(0.85);
+  transition-duration: 250ms;
 }
 .action-label {
   color: black;
