--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -64,6 +64,8 @@
             <p>SCIENCE LEARNING HUB</p>
         </a>
     </div>
+</div>
+<div class="action">
     <div class="action-item">
         <a href="https://www.rainforest-alliance.org/everyday-actions/5-ways-to-build-collective-climate-impact-through-individual-actions/"
             target="_blank"><img class="action-button"
