--- a/templates/more/action.html
+++ b/templates/more/action.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block main %}
-<p class="src">
+<p class="source">
     Below are resources to help you better understand <b>climate change</b> and how to reduce your <b>carbon
         footprint</b>:
 </p>
@@ -64,8 +64,6 @@
             <p>SCIENCE LEARNING HUB</p>
         </a>
     </div>
-</div>
-<div class="action">
     <div class="action-item">
         <a href="https://www.rainforest-alliance.org/everyday-actions/5-ways-to-build-collective-climate-impact-through-individual-actions/"
             target="_blank"><img class="action-button"
@@ -117,11 +115,4 @@
         </a>
     </div>
 </div>
-
-<p class="src">
-    <b>What is Climate Change?</b>
-</p>
-<p class="src">
-    <b>How to decrease your carbon footprint? </b><br>
-</p>
 {% endblock %}
