Added source and average co2 per person

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,20 @@
 <h2>FACTS</h2>
 <hr>
 <div id="facts">
-  Climate change is the change in temperature and weather of a place. In recent times, the Earth’s temperature has gone
-  up, and these changes in temperature can have huge long-term effects. For example, the warming of earth’s climate
-  causes ice to melt, leading to rising sea levels. The weather also changes, causing hotter summers, colder winters,
-  droughts, stronger hurricanes, etc.
-  <br><br>
-  People can contribute to climate change. Driving cars, using heaters and AC units, manufacturing goods, and raising
-  livestock are all activities that use up energy, and burning fossil fuels, such as coal and oil, is one way we get
-  this energy. Burning fossil fuels emit greenhouse gases, like CO2, into the air, and these gases cause the air to heat
-  up leading to climate change as they accumulate in the atmosphere.
+  <p>
+    Climate change is the change in temperature and weather of a place. In recent times, the Earth’s temperature has
+    gone
+    up, and these changes in temperature can have huge long-term effects. For example, the warming of earth’s climate
+    causes ice to melt, leading to rising sea levels. The weather also changes, causing hotter summers, colder winters,
+    droughts, stronger hurricanes, etc.
+  </p><br>
+  <p>
+    People can contribute to climate change. Driving cars, using heaters and AC units, manufacturing goods, and raising
+    livestock are all activities that use up energy, and burning fossil fuels, such as coal and oil, is one way we get
+    this energy. Burning fossil fuels emit greenhouse gases, like CO2, into the air, and these gases cause the air to
+    heat
+    up leading to climate change as they accumulate in the atmosphere.
+  </p>
 </div>
 
 <h2>EXPLORE</h2>
@@ -31,6 +36,7 @@
 <h2>
   Total CO2 produced: {{ totalco2 }} lbs/year, or about {{ totaltons }} tons/year*
 </h2>
+<p class="caption">The average person produces 4.79 tons/year</p>
 <p class="caption">*Please note that these numbers are approximations and does not account for all possible sources of
   carbon
   emissions</p>
