--- a/templates/more/sources.html
+++ b/templates/more/sources.html
@@ -34,6 +34,11 @@
     href="https://css.umich.edu/factsheets/carbon-footprint-factsheet.">https://css.umich.edu/factsheets/carbon-footprint-factsheet.</a>
 </p>
 <p class="source">
+  “CO2 Emissions per Capita.” Worldometer, Worldometer,
+  <a
+    href="https://www.worldometers.info/co2-emissions/co2-emissions-per-capita/">https://www.worldometers.info/co2-emissions/co2-emissions-per-capita/.</a>
+</p>
+<p class="source">
   "Fashion Footprint Calculator". Thredup, <a
     href="https://www.thredup.com/fashionfootprint.">https://www.thredup.com/fashionfootprint.</a></p>
 <p class="source">
