--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
   Total CO2 produced: {{ totalco2 }} lbs/year, or about {{ totaltons }} tons/year*
 </h2>
 <p class="caption">The average person produces 4.79 tons/year</p>
-<p class="caption">*Please note that these numbers are approximations and does not account for all possible sources of
+<p class="caption">*Please note that these numbers are approximations and do not account for all possible sources of
   carbon
   emissions</p>
 {% else %}
