--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property="og:image" content="{{ url_for('static', filename='carbometer-favicon.png') }}" />
+  <meta property="og:description" content="" />
+  <meta property="og:url"content="{{ url_for(request.endpoint) }}" />
+  <meta property="og:title" content="{% block title %}{% endblock %}" />
+  
   {% block css %}{% endblock %}
   <title>{% block title %}{% endblock %}</title>
   <link rel="icon" href="{{ url_for('static', filename='carbometer-favicon.png') }}">
